--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -45,7 +45,7 @@ RCC.I2C4Freq_Value=50000000
 RCC.APB2TimFreq_Value=200000000
 PB6.Signal=QUADSPI_BK1_NCS
 PC7.Signal=USART6_RX
-RTC.IPParameters=Month,Date,WeekDay
+RTC.IPParameters=Month,Date,WeekDay,Hours,Minutes
 PD0.Signal=FMC_D2_DA2
 PD8.Signal=FMC_D13_DA13
 USART6.VirtualMode-Asynchronous=VM_ASYNC
@@ -310,7 +310,7 @@ PE3.Signal=GPIO_Input
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PF4.Signal=FMC_A4
 PD2.Signal=SDMMC1_CMD
-RTC.Date=2
+RTC.Date=31
 PI1.GPIO_Label=ARDUINO SCK/D13
 PG15.Locked=true
 Mcu.Family=STM32F7
@@ -343,7 +343,7 @@ PA12.GPIOParameters=GPIO_Label
 PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA11.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=FMC_D2 [MT48LC4M32B2B5-6A_DQ2]
-RTC.WeekDay=RTC_WEEKDAY_WEDNESDAY
+RTC.WeekDay=RTC_WEEKDAY_MONDAY
 PH10.Locked=true
 PD6.Locked=true
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
@@ -575,7 +575,7 @@ PF1.Signal=FMC_A1
 SH.FMC_D11_DA11.ConfNb=1
 RCC.UART5Freq_Value=50000000
 PF8.GPIO_Mode=GPIO_MODE_ANALOG
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 PJ0.Signal=LTDC_R1
 ProjectManager.AskForMigrate=true
 PE0.Signal=FMC_NBL0
@@ -585,6 +585,7 @@ PB2.Locked=true
 Mcu.IP6=USART6
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=200000000
+RTC.Hours=23
 PA1.Locked=true
 KeepUserPlacement=false
 PA13.Locked=true
@@ -961,10 +962,11 @@ PK3.Locked=true
 Mcu.Pin4=PE1
 PD10.GPIOParameters=GPIO_Label
 Mcu.Pin5=PE0
+RTC.Minutes=59
 SH.FMC_D8_DA8.0=FMC_D8
 PI8.Signal=RTC_TS
 SH.FMC_D2_DA2.0=FMC_D2
-RTC.Month=RTC_MONTH_FEBRUARY
+RTC.Month=RTC_MONTH_DECEMBER
 PE13.Signal=FMC_D10_DA10
 PI1.GPIO_PuPd=GPIO_NOPULL
 PI5.Locked=true
@@ -994,6 +996,7 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PK0.GPIO_Label=LCD_G5 [RK043FN48H-CT672B_G5]
 PD14.Locked=true
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
+RCC.LSI_VALUE=32000
 PF5.GPIO_Label=FMC_A5 [MT48LC4M32B2B5-6A_A5]
 SH.FMC_A9.0=FMC_A9
 USART6.BaudRate=9600
