add RTC and GPS time compare

--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -45,7 +45,7 @@ RCC.I2C4Freq_Value=50000000
 RCC.APB2TimFreq_Value=200000000
 PB6.Signal=QUADSPI_BK1_NCS
 PC7.Signal=USART6_RX
-RTC.IPParameters=Month,Date,WeekDay,Hours,Minutes
+RTC.IPParameters=Month,Date,WeekDay,Hours,Minutes,Format
 PD0.Signal=FMC_D2_DA2
 PD8.Signal=FMC_D13_DA13
 USART6.VirtualMode-Asynchronous=VM_ASYNC
@@ -773,6 +773,7 @@ PC6.Mode=Asynchronous
 PC6.Locked=true
 PA9.Signal=USART1_TX
 PB5.Locked=true
+RTC.Format=RTC_FORMAT_BIN
 PB4.GPIO_PuPd=GPIO_NOPULL
 PI1.Locked=true
 PD7.Locked=true
