--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -108,6 +108,7 @@ PB9.GPIO_PuPd=GPIO_NOPULL
 PA10.Signal=USB_OTG_FS_ID
 PJ3.Locked=true
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+FREERTOS.FootprintOK=true
 PE12.GPIO_Label=FMC_D9 [MT48LC4M32B2B5-6A_DQ9]
 PH6.Locked=true
 PF7.Locked=true
@@ -136,7 +137,7 @@ SH.FMC_A4.0=FMC_A4
 PK4.Signal=LTDC_B5
 ProjectManager.ProjectFileName=UARTTTTTT.ioc
 SH.FMC_A5.ConfNb=1
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ECHO,-3,128,EchoFunction,Default,NULL,Dynamic,NULL,NULL
 PH13.Locked=true
 PH13.Signal=GPIO_Output
 Mcu.Pin79=PC7
@@ -412,7 +413,7 @@ PG8.GPIOParameters=GPIO_Label
 Mcu.Pin149=PB10
 SH.FMC_NBL1.0=FMC_NBL1
 PA8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd,GPIO_Label
-FREERTOS.IPParameters=Tasks01
+FREERTOS.IPParameters=Tasks01,FootprintOK
 PA15.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 Mcu.Pin140=PA6
 PA9.GPIO_Mode=GPIO_MODE_AF_PP
@@ -925,7 +926,7 @@ PG6.Locked=true
 PC10.Signal=SDMMC1_D2
 SH.FMC_NBL0.0=FMC_NBL0
 PI13.Locked=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_UART7_Init-UART7-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART6_UART_Init-USART6-false-HAL-true,4-MX_UART7_Init-UART7-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ULPI_STP [USB3320C-EZK_STP]
 SH.FMC_D6_DA6.0=FMC_D6
