ECHO TEST 2 (need fix)

--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -137,7 +137,7 @@ SH.FMC_A4.0=FMC_A4
 PK4.Signal=LTDC_B5
 ProjectManager.ProjectFileName=UARTTTTTT.ioc
 SH.FMC_A5.ConfNb=1
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,StartEchoTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,tcpecho_thread,Default,NULL,Dynamic,NULL,NULL
 PH13.Locked=true
 PH13.Signal=GPIO_Output
 Mcu.Pin79=PC7
