--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -268,6 +268,7 @@ Mcu.Pin26=PD0
 Mcu.Pin27=PC11
 Mcu.Pin24=PJ12
 Mcu.Pin25=PD6
+CORTEX_M7.IPParameters=FlashInterface
 Mcu.Pin28=PC10
 PC7.GPIO_Label=ARDUINO RX/D0
 Mcu.Pin29=PA12
@@ -1104,6 +1105,7 @@ PH2.GPIOParameters=GPIO_Label
 PH11.Locked=true
 RCC.PLLSAIoutputFreq_Value=48000000
 PE11.Signal=FMC_D8_DA8
+CORTEX_M7.FlashInterface=AXI_Enabled
 PD3.Locked=true
 PK0.Signal=LTDC_G5
 PB1.Locked=true
