--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -3,13 +3,15 @@ PB13.GPIOParameters=GPIO_Label
 RCC.USART1Freq_Value=100000000
 VP_SYS_VS_tim6.Mode=TIM6
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload
 RCC.PLLCLKFreq_Value=200000000
 PA14.GPIO_Label=SWCLK
+PH6.GPIO_Label=Timled
 RCC.PLLQCLKFreq_Value=44444444.44444445
 PG3.GPIOParameters=GPIO_Label
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 PI11.Locked=true
-RCC.RTCFreq_Value=32000
+RCC.RTCFreq_Value=32768
 PA3.GPIOParameters=GPIO_Label
 PD4.Locked=true
 PG14.GPIOParameters=GPIO_Label
@@ -40,6 +42,7 @@ PG13.Locked=true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PJ12.GPIOParameters=GPIO_Label
 PB3.Mode=Trace_Asynchronous_SW
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 PB12.GPIO_Label=ULPI_D5 [USB3320C-EZK_D5]
 PG14.Mode=RMII
 PH0/OSC_IN.Locked=true
@@ -55,6 +58,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 PC15/OSC32_OUT.Locked=true
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 ProjectManager.HalAssertFull=false
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
 RCC.MCO2PinFreq_Value=200000000
 Mcu.Package=TFBGA216
 RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
@@ -67,6 +71,7 @@ PA14.Locked=true
 NVIC.TimeBaseIP=TIM6
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 FREERTOS.FootprintOK=true
+PH6.Locked=true
 PA5.GPIOParameters=GPIO_Label
 PF7.Locked=true
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
@@ -74,6 +79,7 @@ RCC.CECFreq_Value=32786.88524590164
 RCC.APB1TimFreq_Value=100000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC14/OSC32_IN.GPIO_Label=RCC_OSC32_IN
+TIM1.Period=49999
 PB13.Mode=Host_HS
 PI11.Signal=GPIO_Input
 PD5.Locked=true
@@ -86,7 +92,7 @@ PA5.Mode=Host_HS
 RCC.PLLQoutputFreq_Value=44444444.44444445
 ProjectManager.ProjectFileName=UARTTTTTT.ioc
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,tcpecho_thread,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=41
+Mcu.PinsNb=43
 PG3.Locked=true
 PC2.Signal=USB_OTG_HS_ULPI_DIR
 PB11.GPIO_Label=ULPI_D4 [USB3320C-EZK_D4]
@@ -99,38 +105,42 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_8
 ETH.IPParameters=MediaInterface,PhyAddress
 PA3.Mode=Host_HS
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 LWIP.LWIP_HTTPD_SUPPORT_POST=1
 PB11.Mode=Host_HS
 PH4.Locked=true
 RCC.USART6Freq_Value=100000000
 LWIP.LWIP_NETIF_LINK_CALLBACK=0
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 PB5.Locked=true
 PB11.GPIOParameters=GPIO_Label
 RTC.Format=RTC_FORMAT_BIN
 PI1.Locked=true
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
 PA5.Signal=USB_OTG_HS_ULPI_CK
-Mcu.Pin40=VP_SYS_VS_tim6
+Mcu.Pin40=VP_RTC_VS_RTC_Calendar
+Mcu.Pin41=VP_SYS_VS_tim6
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
 ProjectManager.LastFirmware=true
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 PA1.Mode=RMII
-Mcu.Pin37=VP_LWIP_VS_Enabled
-Mcu.Pin38=VP_RTC_VS_RTC_Activate
-Mcu.Pin35=PB11
+Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin38=VP_LWIP_VS_Enabled
+Mcu.Pin35=PB0
 RCC.I2C1Freq_Value=50000000
-Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin36=PB11
 RCC.PLLI2SPCLKFreq_Value=50000000
-Mcu.Pin39=VP_RTC_VS_RTC_Calendar
+Mcu.Pin39=VP_RTC_VS_RTC_Activate
 PI1.Signal=GPIO_Output
 RCC.RNGFreq_Value=48000000
 PC2.GPIOParameters=GPIO_Label
 Mcu.Pin30=PC5
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 RCC.EthernetFreq_Value=200000000
-Mcu.Pin33=PB1
-Mcu.Pin34=PB0
-Mcu.Pin31=PA3
-Mcu.Pin32=PA7
+Mcu.Pin33=PA7
+Mcu.Pin34=PB1
+Mcu.Pin31=PH6
+Mcu.Pin32=PA3
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Trace_Asynchronous_SW
 PG14.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
@@ -150,8 +160,8 @@ Mcu.Pin22=PC0
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 Mcu.Pin23=PC1
 Mcu.Pin20=PB13
-PA3.Locked=true
 Mcu.Pin21=PB12
+PA3.Locked=true
 PA5.GPIO_Label=ULPI_CLK [USB3320C-EZK_CLKOUT]
 NVIC.ForceEnableDMAVector=true
 PA14.GPIOParameters=GPIO_Label
@@ -169,8 +179,10 @@ LWIP.Version=v2.1.2_Cube
 Mcu.Pin13=PC15/OSC32_OUT
 UART7.IPParameters=BaudRate
 Mcu.Pin14=PI11
+PH6.Signal=GPIO_Output
 Mcu.Pin19=PF6
 PF6.Mode=Asynchronous
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 UART7.BaudRate=9600
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PH4
@@ -226,6 +238,7 @@ Mcu.IP3=LWIP
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
 PH4.GPIOParameters=GPIO_Label
+TIM1.Prescaler=3999
 Mcu.UserConstants=
 PI1.GPIOParameters=GPIO_Label
 PC1.GPIOParameters=GPIO_Label
@@ -233,7 +246,7 @@ RCC.SDMMCFreq_Value=48000000
 Mcu.ThirdPartyNb=0
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 RCC.HCLKFreq_Value=200000000
-Mcu.IPNb=9
+Mcu.IPNb=10
 RCC.PLLI2SRoutputFreq_Value=50000000
 ProjectManager.PreviousToolchain=
 RCC.SPDIFRXFreq_Value=50000000
@@ -266,6 +279,7 @@ PE3.GPIOParameters=GPIO_Label
 PB3.GPIOParameters=GPIO_Label
 PJ12.GPIO_Label=OTG_FS_VBUS
 PE3.Locked=true
+PH6.GPIOParameters=GPIO_Label
 PG13.Mode=RMII
 LWIP.LWIP_HTTPD_CGI=0
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
@@ -350,13 +364,14 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PD4.GPIOParameters=GPIO_Label
 PD5.PinState=GPIO_PIN_SET
 RCC.UART5Freq_Value=50000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F746NGHx
 NVIC.SavedPendsvIrqHandlerGenerated=true
-PA2.Signal=ETH_MDIO
 PA13.GPIO_Label=SWDIO
-Mcu.IP8=UART7
+PA2.Signal=ETH_MDIO
+Mcu.IP8=TIM1
+Mcu.IP9=UART7
 Mcu.IP6=RTC
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
@@ -367,8 +382,8 @@ PA1.Locked=true
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 KeepUserPlacement=false
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
-PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PA13.Locked=true
+PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PA14.Signal=SYS_JTCK-SWCLK
 RCC.HSI_VALUE=16000000
 PH0/OSC_IN.GPIO_Label=OSC_25M [NZ2520SB-25.00M_OUT]
