--- a/UARTTTTTT.ioc
+++ b/UARTTTTTT.ioc
@@ -25,6 +25,7 @@ LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.LWIP_HTTPD=1
 RCC.LPTIM1Freq_Value=50000000
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+PI0.GPIO_PuPd=GPIO_PULLDOWN
 PF7.Signal=UART7_TX
 RCC.PLL48CLockSelection=RCC_CLK48SOURCE_PLLSAIP
 LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,LWIP_NETIF_LINK_CALLBACK,LWIP_HTTPD,LWIP_HTTPD_CGI,LWIP_HTTPD_CGI_SSI,LWIP_HTTPD_MAX_TAG_NAME_LEN,LWIP_HTTPD_CUSTOM_FILES,LWIP_HTTPD_SUPPORT_POST
@@ -92,10 +93,11 @@ PA5.Mode=Host_HS
 RCC.PLLQoutputFreq_Value=44444444.44444445
 ProjectManager.ProjectFileName=UARTTTTTT.ioc
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,128,tcpecho_thread,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=43
+Mcu.PinsNb=44
 PG3.Locked=true
 PC2.Signal=USB_OTG_HS_ULPI_DIR
 PB11.GPIO_Label=ULPI_D4 [USB3320C-EZK_D4]
+SH.GPXTI0.ConfNb=1
 LWIP.LWIP_DHCP=0
 RCC.UART8Freq_Value=50000000
 PC0.Signal=USB_OTG_HS_ULPI_STP
@@ -118,49 +120,51 @@ RTC.Format=RTC_FORMAT_BIN
 PI1.Locked=true
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
 PA5.Signal=USB_OTG_HS_ULPI_CK
-Mcu.Pin40=VP_RTC_VS_RTC_Calendar
-Mcu.Pin41=VP_SYS_VS_tim6
-Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin40=VP_RTC_VS_RTC_Activate
+Mcu.Pin41=VP_RTC_VS_RTC_Calendar
+Mcu.Pin42=VP_SYS_VS_tim6
+Mcu.Pin43=VP_TIM1_VS_ClockSourceINT
 ProjectManager.LastFirmware=true
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 PA1.Mode=RMII
-Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin38=VP_LWIP_VS_Enabled
-Mcu.Pin35=PB0
+Mcu.Pin37=PB11
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin35=PB1
 RCC.I2C1Freq_Value=50000000
-Mcu.Pin36=PB11
+Mcu.Pin36=PB0
 RCC.PLLI2SPCLKFreq_Value=50000000
-Mcu.Pin39=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_LWIP_VS_Enabled
 PI1.Signal=GPIO_Output
 RCC.RNGFreq_Value=48000000
 PC2.GPIOParameters=GPIO_Label
-Mcu.Pin30=PC5
+Mcu.Pin30=PA5
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 RCC.EthernetFreq_Value=200000000
-Mcu.Pin33=PA7
-Mcu.Pin34=PB1
-Mcu.Pin31=PH6
-Mcu.Pin32=PA3
+Mcu.Pin33=PA3
+Mcu.Pin34=PA7
+Mcu.Pin31=PC5
+Mcu.Pin32=PH6
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PI0.Locked=true
 PA13.Mode=Trace_Asynchronous_SW
 PG14.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 ProjectManager.FreePins=false
 RCC.PLLI2SQCLKFreq_Value=50000000
-Mcu.Pin26=PA1
-Mcu.Pin27=PC4
-Mcu.Pin24=PC2
+Mcu.Pin26=PG3
+Mcu.Pin27=PA1
+Mcu.Pin24=PC1
 PH4.Mode=Host_HS
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PG3
+Mcu.Pin25=PC2
 CORTEX_M7.IPParameters=FlashInterface
-Mcu.Pin28=PA2
-Mcu.Pin29=PA5
+Mcu.Pin28=PC4
+Mcu.Pin29=PA2
 PB5.Signal=USB_OTG_HS_ULPI_D7
-Mcu.Pin22=PC0
+Mcu.Pin22=PB12
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
-Mcu.Pin23=PC1
-Mcu.Pin20=PB13
-Mcu.Pin21=PB12
+Mcu.Pin23=PC0
+Mcu.Pin20=PF6
+Mcu.Pin21=PB13
 PA3.Locked=true
 PA5.GPIO_Label=ULPI_CLK [USB3320C-EZK_CLKOUT]
 NVIC.ForceEnableDMAVector=true
@@ -170,23 +174,23 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ProjectManager.CompilerOptimize=6
 PG11.Mode=RMII
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PH0/OSC_IN
+Mcu.Pin15=PI11
 LWIP.LWIP_HTTPD_CUSTOM_FILES=1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Mcu.Pin16=PH1/OSC_OUT
+Mcu.Pin16=PH0/OSC_IN
 PB1.Mode=Host_HS
 LWIP.Version=v2.1.2_Cube
-Mcu.Pin13=PC15/OSC32_OUT
+Mcu.Pin13=PI0
 UART7.IPParameters=BaudRate
-Mcu.Pin14=PI11
+Mcu.Pin14=PC15/OSC32_OUT
 PH6.Signal=GPIO_Output
-Mcu.Pin19=PF6
+Mcu.Pin19=PF7
 PF6.Mode=Asynchronous
 NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 UART7.BaudRate=9600
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PH4
-Mcu.Pin18=PF7
+Mcu.Pin17=PH1/OSC_OUT
+Mcu.Pin18=PH4
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PI1
 Mcu.Pin12=PC14/OSC32_IN
@@ -225,6 +229,7 @@ VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 PB13.GPIO_Label=ULPI_D6 [USB3320C-EZK_D6]
 PC1.Locked=true
 PB11.Signal=USB_OTG_HS_ULPI_D4
+PI0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG11.Signal=ETH_TX_EN
 ProjectManager.StackSize=0x400
 PB5.GPIOParameters=GPIO_Label
@@ -238,7 +243,7 @@ Mcu.IP3=LWIP
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
 PH4.GPIOParameters=GPIO_Label
-TIM1.Prescaler=3999
+TIM1.Prescaler=7999
 Mcu.UserConstants=
 PI1.GPIOParameters=GPIO_Label
 PC1.GPIOParameters=GPIO_Label
@@ -273,6 +278,7 @@ PC15/OSC32_OUT.GPIOParameters=GPIO_Label
 RTC.Month=RTC_MONTH_DECEMBER
 RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Trace_Asynchronous_SW
+PI0.Signal=GPXTI0
 PB5.Mode=Host_HS
 File.Version=6
 PE3.GPIOParameters=GPIO_Label
@@ -295,6 +301,8 @@ PD5.GPIO_Label=OTG_FS_PowerSwitchOn [STMPS2141STR_EN]
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 RCC.LSI_VALUE=32000
+SH.GPXTI0.0=GPIO_EXTI0
+PI0.GPIO_Label=PPS
 RCC.PLLSAIN=384
 RCC.PLLSAIP=RCC_PLLSAIP_DIV8
 RCC.PLLSAIR=5
@@ -376,6 +384,7 @@ Mcu.IP6=RTC
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 PB3.Signal=SYS_JTDO-SWO
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 RCC.SYSCLKFreq_VALUE=200000000
 RTC.Hours=23
 PA1.Locked=true
